Fix: Posição do z-index e pegando a referência na hora certa

--- a/src/app/smn-ui/date-picker/date-picker-caller.directive.scss
+++ b/src/app/smn-ui/date-picker/date-picker-caller.directive.scss
@@ -7,7 +7,7 @@
         transition: transform 280ms ui-easing('sharp'), opacity 280ms ui-easing('sharp');
         transform: scale(0);
         opacity: 0;
-        z-index: 1;
+        z-index: 3;
     }
 
     &.open ui-calendar {
@@ -21,7 +21,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        z-index: 1;
+        z-index: 3;
         display: flex;
         background-color: transparent !important;
 
@@ -36,7 +36,7 @@
         }
 
         .overlay, ui-calendar {
-            z-index: 1;
+            z-index: 3;
         }
 
         ui-calendar {
